# emmpm

./: .gitmodules  CMakeLists.txt  CodeToLatex.sh  em.c  mpm.c
Code/EMMPMLib/: CMakeLists.txt  EMMPMConfiguration.h.in
Code/EMMPMLib/Common/: EMMPM.cpp  EMMPM.h  EMMPMInputParser.cpp  EMMPMInputParser.h  EMMPMLibDLLExport.h  EMMPMUtilities.cpp  EMMPMUtilities.h  EMMPM_Data.cpp  EMMPM_Data.h  EMTime.cpp  Entropy.cpp  Entropy.h  InitializationFunctions.cpp  InitializationFunctions.h  Observable.h  Observer.h  SourceList.cmake  StatsDelegate.h  random.c  random.h
Code/EMMPMLib/Core/: EMCalculation.cpp  EMCalculation.h  EMMPM.cpp  EMMPM.h  EMMPMUtilities.cpp  EMMPM_Data.cpp  EMMPM_Data.h  InitializationFunctions.h  MPMCalculation.cpp  MPMCalculation.h  MorphFilt.h  SourceList.cmake
Code/EMMPMLib/Curvature/: CurvatureEM.cpp  CurvatureEM.h  CurvatureMPM.cpp  CurvatureMPM.h  MorphFilt.cpp  MorphFilt.h  SourceList.cmake
Code/EMMPMLib/common/: EMMPMLibDLLExport.h  EMTime.h  SourceList.cmake  _allocate.c  _allocate.h  entropy.c  entropy.h  random.c
Code/EMMPMLib/mt/: SourceList.cmake
Code/EMMPMLib/private/: SourceList.cmake  curvature_em.c  curvature_em.h  curvature_mpm.c  curvature_mpm.h  em_util.c  em_util.h  morphFilt.c  morphFilt.h
Code/EMMPMLib/public/: EMMPM.c  EMMPM.h  EMMPMInputParser.cpp  EMMPM_Structures.h  InitializationFunctions.c  InitializationFunctions.h  ProgressFunctions.h  SourceList.cmake
Code/EMMPMLib/tiff/: EMTiffIO.c  EMTiffIO.h  SourceList.cmake  TiffUtilities.cpp  TiffUtilities.h
Code/apps/: CMakeLists.txt  curvature.cpp  main.cpp
Code/basic_app/: allocate.c  em.c  entropy.c  mpm.c  random.c  random.h
Code/branches/init_3classes_write_2classes/: em.c
Code/branches/init_4classes_write_2classes/: em.c
Code/emmpm/: CMakeLists.txt
Code/emmpm/Common/: CMakeLists.txt  EMTiffIO.h  random.c
Code/emmpm/basic/: em.c  entropy.c
Code/emmpm/common/: CMakeLists.txt  DLLExport.h  EMMPM.c  EMMPM.h  EMMPM_Constants.h  EMTiffIO.c  EMTiffIO.h  EMTime.c  EMTime.h  MSVCDefines.h  SourceList.cmake  allocate.c  allocate.h  em.c  em.h  entropy.c  mpm.c  mpm.h  random.c  random.h
Code/emmpm/common/io/: EMTiffIO.c  EMTiffIO.h  SourceList.cmake
Code/emmpm/common/utilities/: EMTime.c  EMTime.h  InitializationFunctions.c  InitializationFunctions.h  ProgressFunctions.c  ProgressFunctions.h  SourceList.cmake  allocate.c  allocate.h  entropy.h  random.c  random.h
Code/emmpm/init_2class/: CMakeLists.txt  em.c  main.c  mpm.c
Code/emmpm/init_3class/: CMakeLists.txt  em.c
Code/emmpm/init_3classes_write_2classes/: CMakeLists.txt  em.c  tiff.c
Code/emmpm/init_4classes/: CMakeLists.txt  em.c
Code/emmpm/init_4classes_write_2classes/: em.c
Code/emmpm/mt/: SourceList.cmake  mt19937ar.h
Code/emmpm/ocl/: OpenCLCodeToHeader.c  SourceList.cmake
Code/emmpm/opencl/: OpenCLCodeToHeader.c  OpenCLUtils.c  OpenCLUtils.h  SourceList.cmake  ocl_mpm_cpu.cl  opencl_mpm.c  opencl_mpm.h
Code/emmpm/private/: SourceList.cmake  curvature_em.c  curvature_em.h  curvature_mpm.c  curvature_mpm.h  em.c  em.h  em_util.c  em_util.h  morphFilt.c  morphFilt.h  mpm.c  mpm.h  ocl_mpm_cpu.cl  opencl_mpm.c
Code/emmpm/public/: EMMPM.c  EMMPM.h  EMMPMInputParser.cpp  EMMPMInputParser.h  EMMPM_Constants.h  EMMPM_Structures.h  InitializationFunctions.c  InitializationFunctions.h  ProgressFunctions.c  ProgressFunctions.h  SourceList.cmake
Code/emmpm/tiff/: EMTiffIO.c  EMTiffIO.h  SourceList.cmake
Documentation/: Compiling.md  index.dox
Example/: CMakeLists.txt  EMMPM_Progress.c  EMMPM_Progress.h  EMMPM_Public.c  EMMPM_Public.h  example.c
Resources/: emmpm.doxyfile.in
Resources/CMake/: FindTiff.cmake  PrimitiveTypes.h.in
Resources/CPack/: PackageProject.cmake
Resources/cmp/: cmpCMakeMacros.cmake
Resources/cmp/ConfiguredFiles/: cmpConfiguration.h.in  cmpPrimitiveTypes.h.in
Resources/emmpm/: EMMPMConfiguration.h.in  License.txt.in  ReadMe.txt.in
Support/MXA/Common/: SourceList.cmake
UnusedCode/basic_app/: CMakeLists.txt  Makefile  em.c  mpm.c  tiff.h
UnusedCode/branches/init_3classes_write_2classes/: em.c
UnusedCode/branches/init_4classes_write_2classes/: CMakeLists.txt  em.c
